--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_margin="15dp"
-        android:background="@drawable/cornerroundbgwhite"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/buttons"
         android:elevation="10dp">
         <LinearLayout
             android:layout_width="wrap_content"
@@ -82,38 +83,56 @@
         </LinearLayout>
 
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="15dp">
-        <Button
-            android:layout_width="80dp"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_marginRight="5dp"
-            android:text="🌙"
-            android:textSize="15sp"
             android:background="@drawable/buttons"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:elevation="10dp"/>
-
-        <Button
-            android:layout_width="80dp"
+            android:elevation="10dp"
+            android:layout_margin="15dp"
+            android:gravity="center">
+            <TextView
+                android:id="@+id/modes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="🌙"
+                android:textSize="30dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_marginRight="5dp"
-            android:text="⚙️"
-            android:textSize="15dp"
-            android:backgroundTint="@color/blackL"
-            android:textColor="@color/white"/>
-        <Button
+            android:background="@drawable/buttons"
+            android:elevation="10dp"
+            android:layout_marginVertical="15dp"
+            android:gravity="center">
+            <TextView
+                android:id="@+id/settings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="⚙️"
+                android:textSize="30dp"/>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="70dp"
+            android:background="@drawable/buttons"
             android:layout_weight="1"
-            android:text="New Estimation"
-            android:textStyle="bold"
-            android:textSize="15sp"/>
+            android:elevation="10dp"
+            android:layout_margin="15dp"
+            android:gravity="center">
+            <TextView
+                android:id="@+id/newEstimation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Estimation"
+                android:textStyle="bold"
+                android:textColor="@color/grey"
+                android:textSize="20dp"/>
+        </LinearLayout>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -142,25 +161,39 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_margin="15dp">
-        <Button
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="70dp"
             android:layout_weight="1"
-            android:text="Transaction History"
-            android:textStyle="bold"
-            android:textSize="15sp"/>
-        <Button
-            android:layout_width="80dp"
             android:layout_height="70dp"
-            android:layout_marginLeft="5dp"
-            android:text="Add"
-            android:textSize="15dp"
-            android:textColor="@color/white"
-            android:backgroundTint="@color/greenL"
-            android:textStyle="bold"
-            android:elevation="10dp"/>
-
-
+            android:background="@drawable/buttons"
+            android:elevation="10dp"
+            android:layout_marginVertical="15dp"
+            android:layout_marginLeft="15dp"
+            android:gravity="center">
+            <TextView
+                android:id="@+id/transactionHistory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Transaction History"
+                android:textColor="@color/grey"
+                android:textSize="20dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/addbutton"
+            android:elevation="10dp"
+            android:layout_margin="15dp"
+            android:gravity="center">
+            <TextView
+                android:id="@+id/addButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:textSize="20dp"/>
+        </LinearLayout>
     </LinearLayout>
 
 
