added dialog button

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="grey">#545454</color>
+    <color name="greyFaded">#959595</color>
     <color name="greenL">#91FF57</color>
     <color name="redL">#FF5757</color>
     <color name="blueL">#58B6FF</color>
