--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="₹1000"
+                android:text="₹0"
                 android:textSize="30dp"
                 android:textColor="@color/blueL"
                 android:textStyle="bold"/>
@@ -38,7 +38,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="₹1000"
+                android:text="₹0"
                 android:textSize="30dp"
                 android:textStyle="bold"
                 android:textColor="@color/redL"/>
@@ -49,7 +49,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="₹1000"
+                android:text="₹0"
                 android:textSize="30dp"
                 android:textStyle="bold"
                 android:textColor="@color/greenL"/>
@@ -74,7 +74,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="₹1000"
+                android:text="₹0"
                 android:textColor="@color/white"
                 android:layout_marginTop="40dp"
                 android:textSize="30dp"
@@ -138,7 +138,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_margin="15dp"
+        android:layout_marginHorizontal="15dp"
         android:background="@drawable/cornerroundbgwhite"
         android:elevation="10dp"
         android:paddingHorizontal="15dp"
